# statefox

./: .clang-format  CMakeLists.txt  CTestTestfile.cmake  Doxyfile_statefox  LICENSE  README.md  cmake_install.cmake  index.html
.github/workflows/: ci.yaml  docs.yaml  lint.yaml
cmake/: Doxyfile.in  DoxygenUtilities.cmake
docs/: CMakeLists.txt  index.html.in  style.css
examples/: simple_fsm.c
include/: sf_status.h  statefox.h
src/: sf_status.c  statefox.c
statefox/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  sf__status_8h.html  sf__status_8h__dep__incl.map  sf__status_8h__dep__incl.md5  sf__status_8h__incl.map  sf__status_8h__incl.md5  sf__status_8h_source.html  statefox_8h.html  statefox_8h__incl.map  statefox_8h__incl.md5  statefox_8h_source.html  structsf__event__t-members.html  structsf__event__t.html  structsf__fsm-members.html  structsf__fsm.html  structsf__fsm__coll__graph.map  structsf__fsm__coll__graph.md5  structsf__fsm__t.html  structsf__status__t-members.html  structsf__status__t.html  structsf__transition__t-members.html  structsf__transition__t.html  structsf__transition__t__coll__graph.map  structsf__transition__t__coll__graph.md5
statefox/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js  variables_7.js  variables_8.js
tests/: test_statefox.c
